[package]
name = "e3-greco-helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Greco conversion helpers"
repository = "https://github.com/gnosisguild/enclave/crates/greco-helpers"

[dependencies]
fhe = { workspace = true }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs" }
num-bigint = { workspace = true }
shared = { package = "zkfhe-shared", git = "https://github.com/gnosisguild/zkfhe-generator" }

[dev-dependencies]
e3-fhe-params = { workspace = true }
fhe-traits = { workspace = true }
greco = { package = "zkfhe-greco", git = "https://github.com/gnosisguild/zkfhe-generator" }
rand = { workspace = true }
