[package]
name = "e3-hamt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - A serializable HAMT implementation"
repository = "https://github.com/gnosisguild/enclave/crates/hamt"

[dependencies]
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
