[package]
name = "e3-indexer"
version = "0.1.1-alpha.0"
edition.workspace = true
license.workspace = true
description = "E3 - A indexer for Enclave"
repository = "https://github.com/gnosisguild/enclave/crates/indexer"

[dependencies]
alloy.workspace = true
async-trait.workspace = true
bincode.workspace = true
e3-evm-helpers.workspace = true
eyre.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
