[package]
name = "interfoldup"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Installer for the Interfold CLI tool"
repository = "https://github.com/gnosisguild/interfold"

[[bin]]
name = "interfoldup"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
indicatif = "0.17.11"
flate2 = "1.0"
tar = "0.4"
directories = "6.0.0" 