[package]
name = "e3-keyshare"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Keyshare Actors"
repository = "https://github.com/gnosisguild/enclave/crates/keyshare"

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
e3-config = { workspace = true }
e3-data = { workspace = true }
e3-crypto = { workspace = true }
e3-events = { workspace = true }
e3-fhe = { workspace = true }
e3-request = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
