[package]
name = "e3-keyshare"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Interfold Ciphernode Keyshare Actors"
repository = "https://github.com/gnosisguild/interfold/crates/keyshare"

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
e3-config = { workspace = true }
e3-data = { workspace = true }
e3-crypto = { workspace = true }
e3-events = { workspace = true }
e3-fhe = { workspace = true }
e3-fhe-params = { workspace = true }
e3-multithread = { workspace = true }
e3-request = { workspace = true }
e3-trbfv = { workspace = true }
e3-utils = { workspace = true }
e3-zk-helpers = { workspace = true }
fhe = { workspace = true }
fhe-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
zeroize = { workspace = true }
