[package]
name = "e3-logger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E3 - Enclave Ciphernode Logger"
repository = "https://github.com/gnosisguild/enclave/crates/logger"

[dependencies]
e3-events = { workspace = true }
actix = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
