[package]
name = "e3-multithread"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
e3-data = { workspace = true }
e3-trbfv = { workspace = true }
e3-crypto = { workspace = true }
e3-events = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
