[package]
name = "e3-multithread"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
e3-data = { workspace = true }
e3-fhe-params = { workspace = true }
e3-trbfv = { workspace = true }
e3-crypto = { workspace = true }
e3-events = { workspace = true }
e3-pvss = { workspace = true }
e3-utils = { workspace = true }
e3-zk-prover = { workspace = true }
fhe = { workspace = true }
fhe-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
